--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,20 @@ hr {
   padding: 50px;
   display: inline-block;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  background-color: #f5f5f5;
+}
